--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "skipLibCheck": true,
-    "declaration": true
+    "declaration": true,
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
